Add HIDE_ALARM preference
This is useful for non-interactive, "maintenance free" clocks hanging on
the wall.

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -44,6 +44,12 @@
         android:title="@string/title_seconds"/>
     <CheckBoxPreference
         android:defaultValue="false"
+        android:key="@string/key_hide_alarm"
+        android:summaryOff="@string/off"
+        android:summaryOn="@string/on"
+        android:title="@string/title_hide_alarm"/>
+    <CheckBoxPreference
+        android:defaultValue="false"
         android:key="@string/key_ble"
         android:summaryOff="@string/ble_off"
         android:summaryOn="@string/ble_on"
