--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -7,11 +7,21 @@
         <item>Reverse Portrait</item>
         <item>Reverse Landscape</item>
     </string-array>
-    <string-array name="values_rotation">
+    <string-array name="values_rotation" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
         <item>4</item>
+    </string-array>
+    <string-array name="entries_keep_screen_on">
+        <item>AC power only</item>
+        <item>Always</item>
+        <item>Never</item>
+    </string-array>
+    <string-array name="values_keep_screen_on" translatable="false">
+        <item>ac</item>
+        <item>always</item>
+        <item>never</item>
     </string-array>
 </resources>
