Make the second row contents configurable
Allow the user to choose: AM/PM + alarm, AM/PM only, date/weekday, or
disabled.  Also, let the user choose 12h or 24h time.

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -24,4 +24,16 @@
         <item>always</item>
         <item>never</item>
     </string-array>
+    <string-array name="entries_second_row">
+        <item>AM/PM and alarm</item>
+        <item>AM/PM only</item>
+        <item>Weekday and date</item>
+        <item>Disabled</item>
+    </string-array>
+    <string-array name="values_second_row" translatable="false">
+        <item>ampm_alarm</item>
+        <item>ampm</item>
+        <item>date</item>
+        <item>disabled</item>
+    </string-array>
 </resources>
